public interface AparelhoTelefonico {
    void ligar();
    void atender();
    void iniciarCorreiodeVoz();
}
