public interface NavegadorInternet {

        void exibirPagina(String url);
        void adicionarAba();
        void atualizarPagina();
}
